--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,16 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-    <title>SAGE</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head lang="en">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta charset="UTF-8"/>
+    <title>ReactJS + Spring Data REST</title>
+    <link rel="stylesheet" href="/main.css" />
 </head>
 <body>
-    <p>Página Inicial</p>
+
+    <div id="react"></div>
+
+    <script src="built/bundle.js"></script>
+
 </body>
 </html>
